# rfc822-like

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/de/: error.rs  mod.rs
src/ser/: error.rs  mod.rs
